# dns-papin

./: README.md  config.yml  examples.txt  pyproject.toml
dns_papin/: __main__.py  config.py  enums.py  schemas.py  sender.py  utils.py
